# tensor-contraction-sequence-searching

./: README.md
SeqSearch/: CMakeLists.txt
SeqSearch/include/: Tensor.h  utils.h
SeqSearch/src/: SearchParallel.cpp  SearchSequential.cpp  main.cpp  utils.cpp
SeqSearchPrune/: CMakeLists.txt
SeqSearchPrune/include/: Tensor.h  utils.h
SeqSearchPrune/src/: SearchParallel.cpp  SearchSequential.cpp  main.cpp  utils.cpp
